# claritydoc

./: .gitignore  docker-compose.yml  package-lock.json  structure.txt
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ba7dfadb4b4d_add_clerk_id_to_user.py  c7b63a1cbbfb_initial_migration.py
backend/scripts/: test_document_chat.py
backend/src/: config.py  main.py
backend/src/agents/: auditor.py  chronological.py  parser.py  pipeline.py  profiler.py
backend/src/api/: router.py
backend/src/api/v1/: audits.py  documents.py  obligations.py  relationships.py  schemas.py  webhooks.py
backend/src/core/: auth.py
backend/src/database/: models.py  session.py
backend/src/queue/: config.py  start_worker.py  worker.py
backend/src/services/: storage.py
backend/src/services/ai/: base.py  document_chat.py  factory.py  telemetry.py
backend/src/services/ai/providers/: mistral_provider.py  openai_provider.py
backend/tests/: conftest.py
backend/tests/api/v1/: test_documents.py
frontend/: components.json  nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.vue  middleware.global.ts
frontend/app/assets/css/: tailwind.css
frontend/app/components/: ConfirmDialog.vue
frontend/app/components/ui/breadcrumb/: BreadcrumbEllipsis.vue  BreadcrumbList.vue
frontend/app/components/ui/sheet/: SheetContent.vue
frontend/app/layouts/: dashboard.vue
frontend/app/lib/: api.ts
frontend/app/pages/: index.vue
frontend/app/pages/dashboard/: index.vue
frontend/app/types/: api.ts
(+12 files in other folders)
