[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "boto3>=1.34.0",
    "celery[redis]>=5.6.3",
    "email-validator>=2.0.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "loguru>=0.7.2",
    "openai>=2.40.0",
    "openlit>=1.42.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.13.0",
    "pypdf>=6.12.2",
    "pytest-asyncio>=1.4.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.30",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
    "redis>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn>=0.48.0",
]

[project.scripts]
claritydoc-web = "uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload"
claritydoc-worker = "python -m src.queue.start_worker"
